syntax = "proto3";

package google.protobuf;

message FieldMask {
    repeated string paths = 1;
}
